app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }
}

@layer components {
  /* 👇🏽 HomePage */

  .headerItem {
    @apply font-tanker text-header-mobile uppercase leading-header-mobile tracking-wide hover:text-pink-arch lg:text-header-desktop lg:leading-header-desktop;
  }

  .headerMobileItem {
    @apply text-[1.5rem] font-semibold uppercase leading-[1.5rem] tracking-tighter;
  }

  .navBarMobileItem {
    @apply text-[1rem] font-semibold uppercase leading-[1rem] tracking-tighter;
  }

  .heroTitle {
    @apply font-tanker text-[2rem] uppercase leading-[2.25rem] tracking-wide lg:text-[3.3rem] lg:leading-[3rem];
  }

  .heroParagraph {
    @apply font-jetbrains text-[0.9rem] font-light leading-[1.25rem] tracking-widest;
  }

  .heroCta {
    @apply font-jetbrains text-[.7rem] uppercase leading-[.7rem] tracking-widest;
  }

  .heroButtonTransition {
    @apply transition-[transform,padding] duration-300 ease-tamisitée hover:translate-y-0 group-hover:translate-y-0 group-hover:py-[1rem];
  }

  .newsLetterInput {
    @apply h-[2.5rem] w-full flex-1 bg-transparent font-cityburn text-[1.25rem] tracking-wider text-white placeholder:text-[1.25rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0 lg:text-[1.75rem] lg:placeholder:text-[1.75rem];
  }

  .upcomingEventsBoxSize {
    @apply h-[50%] max-h-[50%] w-[100%] max-w-[100%] object-cover;
  }

  /* 👇🏽 Footer */

  .footerText {
    @apply font-jetbrains text-[.8rem] uppercase leading-[1rem] tracking-wider;
  }

  .footerTextHover {
    @apply transition-colors duration-300 ease-tamisitée hover:text-pink-arch;
  }

  .footerCopyright {
    @apply font-jetbrains text-[.6rem] uppercase leading-[.8rem] tracking-wider;
  }

  .footerNewsLetterInput {
    @apply h-[1.5rem] flex-1 bg-transparent font-jetbrains text-[.8rem] tracking-wider text-white placeholder:text-[.8rem] placeholder:tracking-wider placeholder:text-white focus-within:placeholder-transparent focus-within:outline-none focus:ring-0;
  }

  /* 👇🏽 All page */

  .pageTitle {
    @apply font-tanker text-[2rem] uppercase leading-[1.5rem] tracking-wider lg:text-[2.8rem] lg:leading-[2rem];
  }

  .richText {
    @apply font-jetbrains text-[.8rem] leading-[1.2rem] tracking-wider;
  }

  .linkButton {
    @apply w-fit cursor-pointer bg-black px-[1rem] py-[.6rem] font-jetbrains text-[.8rem] uppercase text-white transition-colors duration-200 ease-in-out hover:text-pink-arch;
  }

  .sidebarButton {
    @apply font-tanker text-[1rem] leading-[.7rem] tracking-wider transition-colors duration-100 ease-tamisitée hover:text-pink-arch;
  }

  .sidebarLDFButton {
    @apply font-tanker text-[1rem] leading-[.7rem] tracking-[.25rem] transition-colors duration-100 ease-tamisitée hover:text-pink-arch;
  }

  .sideBarTitle {
    @apply text-start text-[1rem] leading-[1.3rem] tracking-tighter;
  }

  .FormSubmitInput {
    @apply flex w-full rounded-none border-b-[2px] border-black py-[1rem] font-cityburn text-[1.3rem] leading-[1.7rem] tracking-wider text-black placeholder:font-cityburn placeholder:text-[1.3rem] placeholder:leading-[1rem] placeholder:tracking-wider placeholder:text-black focus-within:outline-none focus:ring-0 lg:text-[1.6rem] lg:leading-[2rem] placeholder:lg:text-[1.6rem] placeholder:lg:leading-[1.4rem];
  }

  .deroulantTitle {
    @apply whitespace-nowrap font-cityburn text-[1.3rem] leading-[1.7rem] tracking-wider lg:whitespace-normal lg:text-[1.6rem] lg:leading-[2rem];
  }

  /* 👇🏽 Events */

  .eventType {
    @apply font-tanker text-[1.25rem] uppercase lg:text-[1.5rem];
  }

  .eventTitle {
    @apply font-tanker text-[1.7rem] uppercase leading-[1.7rem] lg:text-[2rem] lg:leading-[2rem];
  }

  .eventDate {
    @apply font-jetbrains text-[.8rem] uppercase leading-[.5rem];
  }

  .eventLocation {
    @apply font-jetbrains text-[.8rem] uppercase leading-[.8rem];
  }

  .eventEntrance {
    @apply font-jetbrains text-[.8rem] uppercase leading-[.8rem];
  }

  .eventParagraph {
    @apply font-jetbrains text-[.8rem] leading-[1.2rem] tracking-wider;
  }

  /* 👇🏽 Blogs */

  .blogTitle {
    @apply font-tanker text-[1.7rem] uppercase leading-[1.7rem] lg:text-[2rem] lg:leading-[2rem];
  }

  .blogSubTitle {
    @apply font-tanker text-[1.3rem] uppercase leading-[1.3rem] lg:text-[1.5rem] lg:leading-[1.5rem];
  }

  .blogAuthor {
    @apply font-jetbrains text-[.8rem] uppercase leading-[1.2rem] tracking-wider text-pink-arch;
  }

  .blogDate {
    @apply font-jetbrains text-[.8rem] uppercase leading-[1.2rem] tracking-wider;
  }

  .blogParagraph {
    @apply font-jetbrains text-[.8rem] leading-[1.2rem] tracking-wider;
  }

  /* 👇🏽 Liste des fonds */

  .ldfTitle {
    @apply font-cityburn text-[1.2rem] leading-[1rem] tracking-wider lg:text-[1.6rem] lg:leading-[1.4rem];
  }
}

@layer utilities {
  .customRounded {
    @apply rounded-b-full rounded-tr-full;
  }

  .boxRounded {
    @apply rounded-b-3xl rounded-tl-lg rounded-tr-3xl;
  }

  /* 👇🏽 Marquee */
  .marquee-container {
    position: relative;
    overflow: hidden;
  }

  .marquee {
    display: inline-block;
    padding-left: 5rem;
    animation: marquee 10s linear infinite;
  }

  .marquee-container:hover .marquee {
    animation-play-state: paused;
  }

  @keyframes marquee {
    0% {
      transform: translateX(0);
    }
    100% {
      transform: translateX(-100%);
    }
  }
}

